        Node AnyId Value: get() now accepts check parameter" 
        Node AnyId: added children method
        
2010-11-28 Dominique Dumont  <domi.dumont@free.fr> 1.223

        * Debian/Dpkg/Copyright: removed restrictions on copyright format
        * dist.ini: added build dependency on Probe::Perl (to run tests that invoke config-edit)
        * Model.pm: can now load model snippet from Foo.d directory. I.e. *.pl files found in Foo.d 
          are used to augment Foo model. This will be useful to agregate models coming from several
          teams. For instance any team can extends the Fstab model provided in this distribution.

2010-11-22 Dominique Dumont  <domi.dumont@free.fr> 1.222

	* bash-completion: fixed missing application option
	* Fstab model: specify '/etc' dir inst

2010-11-21 Dominique Dumont  <domi.dumont@free.fr> 1.221

        * Annotation: can now save annotation for node and list objects
        * Added new Fstab model and backend. Supports ext2 to ext4 and
	other file systems.  Please contact the author if options are
	missing.
        * Fix pod spelling errors (RT #62947). Thanks to carnil for the
	report and patches.
        * added config-edit test (build requires Test::Command)
        * config-edit: added -application option, added -list
  	model|applications option
	* Model.pm: updated doc
	* bash_completion.config-edit: is now *not* executable

2010-11-10 Dominique Dumont  <domi.dumont@free.fr> 1.220

	* Fix Build.PL to install files found in lib/Config/Model/*.d
	* Added Cookbook::CreateModelFromDoc from SF wiki

2010-11-09 Dominique Dumont  <domi.dumont@free.fr> 1.219

        * config-edit: fixed syntax error
        * replaced command lines generated from template by bash-autocompletion.
        * Removed dependency on Text::Template
        * Added Config::Model::Manual::ModelCreationIntroduction doc from SF wiki

2010-11-05 Dominique Dumont  <domi.dumont@free.fr> 1.218

        * Moved doc from README into model.pm