@@ -1,5 +1,5 @@
 name    = Config-Model
-version = 1.223
+version = 1.224
 author  = Dominique Dumont
 author  = Krzysztof Tyszecki
 license = LGPL_2_1
